overflow solved

--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -40,6 +40,7 @@ section#flex-section {
       background: whitesmoke;
       flex: auto;
       overflow: scroll;
+      height: 0;
   }
   aside#flex-aside {
     background: $aside-color;
@@ -81,6 +82,8 @@ section#flex-section {
     }
     main#flex-main {
       order: 2;
+      // flex: auto;
+      height: auto;
     }
     aside#flex-aside {
       order: 3;
